apps/home-assistant/chart/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-ipallow
spec:
  ipAllowList:
    sourceRange:
      - 10.0.0.0/8
